implements service layer units tests